<resources>
    <string name="app_name">animandempty</string>
    <string name="action_settings">Settings</string>
    <string name="nodata">没有数据</string>
    <string name="loading">--加载中--</string>
    <string name="alpha">渐显</string>
    <string name="scale">缩放</string>
    <string name="slidebottom">从下到上</string>
    <string name="slideleft">从左到右</string>
    <string name="slideright">从右到左</string>
    <string name="empty">什么都没有</string>
</resources>
